--- a/TiendaMiaAutomatizacion/TiendaMiaAutomatizacion.csproj
+++ b/TiendaMiaAutomatizacion/TiendaMiaAutomatizacion.csproj
@@ -202,6 +202,9 @@
     <Content Include="extent-config.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="geckodriver.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
