--- a/TiendaMiaAutomatizacion/app.config
+++ b/TiendaMiaAutomatizacion/app.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="Login" value="firefox-remote"/>
-    <add key="AddToCart" value="chrome-remote"/>
+    <add key="Login" value="firefox"/>
+    <add key="AddToCart" value="chrome"/>
     <add key="SeleniumGridUrl" value="http://localhost:4444/wd/hub"/>
   </appSettings>
 </configuration>
