--- a/TiendaMiaAutomatizacion/packages.config
+++ b/TiendaMiaAutomatizacion/packages.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Chromium.ChromeDriver" version="2.37" targetFramework="net472" />
   <package id="DnsClient" version="1.0.7" targetFramework="net472" />
   <package id="ExtentReports" version="4.0.3" targetFramework="net472" />
   <package id="Firefox" version="3.6.6" targetFramework="net472" />
@@ -17,4 +16,5 @@
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net472" />
+  <package id="WebDriver.ChromeDriver.win32" version="83.0.4103.39" targetFramework="net472" />
 </packages>
